--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -120,13 +120,13 @@ Moreover, the manual stages of this kind of workflow are also non-transparent an
 
 Recently, the [Center for Computational Toxicology and Exposure](https://www.epa.gov/aboutepa/about-center-computational-toxicology-and-exposure-ccte) (CCTE) developed a set of Application Programming Interfaces (APIs) that allows programmatic access to the CCD, bypassing the manual steps of the web-based batch search workflow. APIs effectively automate the process of accessing and downloading the data that populates the CCD. 
 
-The [CCTE APIs](https://www.epa.gov/comptox-tools/computational-toxicology-and-exposure-data-apis) are publicly available at no cost to the user. However, in order to use the CCTE APIs, users must have a individual API key. The API key uniquely identifies the user to the CCD servers and verifies that you have permission to access the database. Getting an API key is free, but requires contacting the API support team at [ccte_api@epa.gov](mailto:ccte_api@epa.gov).
+The [CTED APIs](https://www.epa.gov/comptox-tools/computational-toxicology-and-exposure-apis) are publicly available at no cost to the user. However, in order to use the CTED APIs, users must have a individual API key. The API key uniquely identifies the user to the CCD servers and verifies that you have permission to access the database. Getting an API key is free, but requires contacting the API support team at [ccte_api@epa.gov](mailto:ccte_api@epa.gov).
 
 The APIs are organized into sets of "endpoints" by data domains: `Chemical`, `Hazard`, and `Bioactivity`. An endpoint provides access to a specific set of information and data, e.g. physical-chemical properties for a chemical that the user specifies. A view from the [Chemical APIs](https://api-ccte.epa.gov/docs/chemical.html) web interface is pictured below.
 
 <center>
 
-![<font style="font-size:15px"><i>Figure 4: CCTE API Chemical Endpoints</i></font>](./Pictures/CCTE_Chemical_API_endpoints.png)
+![<font style="font-size:15px"><i>Figure 4: CTED API Chemical Endpoints</i></font>](./Pictures/CCTE_Chemical_API_endpoints.png)
 
 </center>
 
@@ -146,7 +146,7 @@ On the left side of each domain's web interface page, there will be several diff
 
 APIs effectively automate the process of accessing and downloading the data that populates the CCD. APIs do this via requests using the Hypertext Transfer Protocol (HTTP) that enables communication between clients (e.g. your computer) and servers (e.g. the CCD).
 
-In the CCTE API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method. <span style="color:blue">GET</span> is used to request data from a specific web resource (e.g. a specific URL); <span style="color:green">POST</span> is used to send data to a server to create or update a web resource. For the CCTE APIs, <span style="color:green">POST</span> requests are used to perform multiple (batch) searches in a single API call; <span style="color:blue">GET</span> requests are used for non-batch searches. 
+In the CTED API web interface, the colored boxes next to each endpoint indicate the type of the associated HTTP method. <span style="color:blue">GET</span> is used to request data from a specific web resource (e.g. a specific URL); <span style="color:green">POST</span> is used to send data to a server to create or update a web resource. For the CTED APIs, <span style="color:green">POST</span> requests are used to perform multiple (batch) searches in a single API call; <span style="color:blue">GET</span> requests are used for non-batch searches. 
 
 You do not need to understand the details of POST and GET requests in order to use the API. Let's consider constructing an API request to `Get data by dtxsid` under the `Chemical Details Resource`.
 
@@ -182,7 +182,7 @@ Pictured below is an example of returned Details for Bisphenol A with the `chemi
 
 Formatting an http request is not necessarily intuitive nor worth the time for someone not already familiar with the process, so these endpoints may provide a resource that for many would require a significant investment in time and energy to learn how to use. However, there is a solution to this in the form of the R package *ccdR*.
 
-*ccdR* was developed to streamline the process of accessing the information available through the CCTE APIs without requiring prior knowledge of how to use APIs. 
+*ccdR* was developed to streamline the process of accessing the information available through the CTED APIs without requiring prior knowledge of how to use APIs. 
 
 ### Package Settings
 
@@ -198,7 +198,7 @@ devtools::install_github("USEPA/ccdR")
 
 ### API Key Storage
 
-As previously described, a user must have an API key to use in order to access the CCTE APIs. This can be obtained from the admins of the CCTE APIs by emailing [CCTE API Admins](mailto:ccte_api@epa.gov). In the example code, the API key will be stored as the variable `my_key`.
+As previously described, a user must have an API key to use in order to access the CTED APIs. This can be obtained from the admins of the CTED APIs by emailing [CTED API Admins](mailto:ccte_api@epa.gov). In the example code, the API key will be stored as the variable `my_key`.
 
 ```{r, echo = FALSE}
 my_key <- ccte_key()
