--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -77,7 +77,7 @@ registerS3method(
 
 ## Introduction
 
-In this vignette, [Computational Toxicology and Exposure (CTE) API Chemical endpoints](https://api-ccte.epa.gov/docs/chemical.html) will be explored. 
+In this vignette, [Computational Toxicology and Exposure Data (CTED) API Chemical endpoints](https://api-ccte.epa.gov/docs/chemical.html) will be explored. 
 
 ::: {.noticebox data-latex=""}
 
@@ -87,7 +87,7 @@ In this vignette, [Computational Toxicology and Exposure (CTE) API Chemical endp
 
 The foundation of toxicology, toxicokinetics, and exposure is embedded in the physics and chemistry of chemical-biological interactions. The accurate characterization of chemical structure linked to commonly used identifiers, such as names and Chemical Abstracts Service Registry Numbers (CASRNs), is essential to support both predictive modeling of the data as well as dissemination and application of the data for chemical safety decisions. 
 
-With cheminformatics as the backbone for research efforts, sources of available data through the CTE API Chemical endpoints include:
+With cheminformatics as the backbone for research efforts, sources of available data through the CTED API Chemical endpoints include:
 
 -  Chemical structures, nomenclature, synonyms, IDs, list associations, physicochemical property, environmental fate, and transport data from the Distributed Structure-Searchable Toxicity (DSSTox) database
 - Predictions from Toxicity Estimation Software Tool (TEST) suite of QSAR models 
@@ -96,7 +96,7 @@ More information on Chemicals and Chemistry Data can be found here: <https://www
 
 ## Functions
 
-Several ccdR functions are used to access the CTE API Chemical data.
+Several ccdR functions are used to access the CTED API Chemical data.
 
 ### Chemical Details Resource
 
@@ -595,7 +595,7 @@ To summarize the observations, across the various physico-chemical properties fo
 
 ## Conclusion
 
-In this vignette, a variety of functions that access different types of data found in the `Chemical` endpoints of the CTE APIs were explored. While this exploration was not exhaustive, it provides a basic introduction to how one may access data and work with it. Additional endpoints and corresponding functions exist and we encourage the user to explore these while keeping in mind the examples contained in this vignette.
+In this vignette, a variety of functions that access different types of data found in the `Chemical` endpoints of the CTEDAPIs were explored. While this exploration was not exhaustive, it provides a basic introduction to how one may access data and work with it. Additional endpoints and corresponding functions exist and we encourage the user to explore these while keeping in mind the examples contained in this vignette.
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
