Made edits to the introduction and changed "CTED" to "CTX" throughout the document.

--- a/vignettes/Hazard.Rmd
+++ b/vignettes/Hazard.Rmd
@@ -66,7 +66,7 @@ registerS3method(
 
 ## Introduction
 
-In this vignette, [CTED Hazard APIs](https://api-ccte.epa.gov/docs/hazard.html) will be explored. 
+In this vignette, [CTX Hazard APIs](https://api-ccte.epa.gov/docs/hazard.html) will be explored. 
 
 ::: {.noticebox data-latex=""}
 
@@ -76,13 +76,13 @@ In this vignette, [CTED Hazard APIs](https://api-ccte.epa.gov/docs/hazard.html) 
 
 Data for the Hazard APIs come from the Toxicity Value Database [(ToxValDB)](https://cfpub.epa.gov/si/si_public_record_Report.cfm?dirEntryId=344315&Lab=NCCT). ToxValDB includes data on thousands of chemicals from tens of thousands of records, with an emphasis on quantitative estimates of relevant points-of-departure from in vivo toxicology studies, such as no- and low-observable adverse effect levels, screening levels, reference doses, tolerable daily intake, etc. 
 
-Data from the Aggregated Computational Toxicology Resource [(ACToR)](https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#actor) is currently being migrated into ToxValDB. The ACToR resource was reported in [Judson et al (2008)](https://doi.org/10.1016/j.taap.2007.12.037) and was designed to serve as a central location for information on chemical structure ***in vitro*** bioassays, and ***in vivo*** toxicology assays used in various [Computational Toxicology](https://www.epa.gov/comptox-tools) efforts at US EPA.
+The Aggregated Computational Toxicology Resource [(ACToR)](https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#actor) is currently being integrated into ToxValDB. ACToR, as described in [Judson et al (2008)](https://doi.org/10.1016/j.taap.2007.12.037), was designed to serve as a central location for information on chemical structure ***in vitro*** bioassays, and ***in vivo*** toxicology assays used in various [Computational Toxicology](https://www.epa.gov/comptox-tools) efforts at US EPA.
 
-More information on ToxValDB can be found at <https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#AT>. Additionally, public presentations and resources to learn more about ToxValDB and the use cases of its data can be found in a [US EPA Computational Toxicology Communities of Practice Monthly Meeting presentation](https://epa.figshare.com/articles/presentation/ToxValDB_Compiling_Publicly_Available_In_Vivo_Toxicity_Data/7800653) and a [2024 Society of Toxicology poster](https://epa.figshare.com/articles/poster/Developing_data_provenance_approaches_in_ToxValDB_An_IRIS_Case_Study/25472164).
+More information on ToxValDB can be found at <https://www.epa.gov/comptox-tools/downloadable-computational-toxicology-data#AT>. Additional resources under "ToxVal" subtopic: [New Approach Methods training](https://www.epa.gov/chemical-research/new-approach-methods-nams-training).
 
 ## Functions
 
-Several ccdR functions are used to access the CTED Hazard API data.
+Several ccdR functions are used to access the CTX Hazard API data.
 
 ### Hazard Resource
 
@@ -187,11 +187,11 @@ Figure 2 shows the genotoxicity section of the hazard tab for Bisphenol A. This 
 ![<font style="font-size:15px"><i>Figure 2: CCD Hazard Data>Genotoxicity for Bisphenol A</i></font>](./Pictures/CCD_BPA_genotoxicity.png)
 </center>
 
-The CTED APIs streamline the process of retrieving this information in a programmatic fashion. Figure 3 shows the particular set of genotoxicity resources available in the `Hazard` endpoints of the CTED APIs. There are both summary and detail resources, reflecting the information one can find on the CompTox Chemicals Dashboard Genotoxicity page for a given chemical.
+The CTX APIs streamline the process of retrieving this information in a programmatic fashion. Figure 3 shows the particular set of genotoxicity resources available in the `Hazard` endpoints of the CTX APIs. There are both summary and detail resources, reflecting the information one can find on the CompTox Chemicals Dashboard Genotoxicity page for a given chemical.
 
 <center>
 
-![<font style="font-size:15px"><i>Figure 3: CTED Hazard APIs for Genotoxicity Endpoints </i></font>](./Pictures/Hazard_-_genotoxicity_resource.png)
+![<font style="font-size:15px"><i>Figure 3: CTX Hazard APIs for Genotoxicity Endpoints </i></font>](./Pictures/Hazard_-_genotoxicity_resource.png)
 </center>
 
 ### Review Genotoxicity Data for Chemical Lists
@@ -313,7 +313,7 @@ head(ccl4_hazard)
 
 ## Conclusion
 
-In this vignette, a variety of functions that access different types of data found in the `Hazard` endpoints of the CTED APIs were explored. While this exploration was not exhaustive, it provides a basic introduction to how one may access data and work with it. Additional endpoints and corresponding functions exist and we encourage the user to explore these while keeping in mind the examples contained in this vignette.
+In this vignette, a variety of functions that access different types of data found in the `Hazard` endpoints of the CTX APIs were explored. While this exploration was not exhaustive, it provides a basic introduction to how one may access data and work with it. Additional endpoints and corresponding functions exist and we encourage the user to explore these while keeping in mind the examples contained in this vignette.
 
 ```{r breakdown, echo = FALSE, results = 'hide'}
 # This chunk will be hidden in the final product. It serves to undo defining the
