--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,8 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of ccdR is to provide R users a set of functions to access the [CTX APIs](https://api-ccte.epa.gov/docs/index.html) without requiring extensive experience interacting directly with APIs.
+The goal of ccdR is to provide R users a set of functions to access the [CTX APIs](https://www.epa.gov/comptox-tools/computational-toxicology-and-exposure-apis)
+without requiring extensive experience interacting directly with APIs.
 
 ## Installation
 
